--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SPOTIPY_CLIENT_ID="46e72b7793b7414abb3f280f45ea52ab"
 SPOTIPY_CLIENT_SECRET="827e6e6d7f6149c8bc2e83387b49089a"
+REDIRECT_URI='http://127.0.0.1:5000/callback'
