--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SPOTIPY_CLIENT_ID="46e72b7793b7414abb3f280f45ea52ab"
 SPOTIPY_CLIENT_SECRET="827e6e6d7f6149c8bc2e83387b49089a"
-REDIRECT_URI='http://127.0.0.1:5000/callback'
+REDIRECT_URI='https://y2splaylist.onrender.com/callback'
 SECRET_KEY='ec8ced7e5e0044c3a8b4277666fa7d38'
 API_KEY='AIzaSyDtOr1WM1s2X5oy_RmULTQGUdPL0L4PzK8'
