--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SPOTIPY_CLIENT_ID="46e72b7793b7414abb3f280f45ea52ab"
-SPOTIPY_CLIENT_SECRET="827e6e6d7f6149c8bc2e83387b49089a"
+SPOTIPY_CLIENT_ID="add_your_client_id_here"
+SPOTIPY_CLIENT_SECRET="add_your_client_secret_key_here"
 REDIRECT_URI='https://y2splaylist.onrender.com/callback'
-SECRET_KEY='ec8ced7e5e0044c3a8b4277666fa7d38'
-API_KEY='AIzaSyDtOr1WM1s2X5oy_RmULTQGUdPL0L4PzK8'
+SECRET_KEY='secret_key_goes_here'
+API_KEY='add_your_api_key_here'
